--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta property="og:title" content="The English to Whale translator">
   <meta property="og:site_name" content="WhaleSay">
-  <meta property="og:description" content="Have you ever wondered how to speak the mysterious language of whales known as 'Whalese'?  Well now though a revolutionary leap in machine learning and AI, our scientists have discovered a foolproof way of translating!  Learn to speek Whalese today!">
+  <meta property="og:description" content="Have you ever wondered how to speak the mysterious language of whales known as 'Whalese'?  Well now though a revolutionary leap in machine learning and AI, our scientists have discovered a foolproof way of translating!  Learn to speak Whalese today!">
   <meta property="og:type" content="app">
   <meta property="og:image" content="img/whalesay-square.png">
   <meta property="og:url" content="http://whalesay.ca">
