--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
   <div class="container">
     <img src="img/whitewhale.svg" alt="WhaleSay logo">
-    <h2>Mobile app coming Soon!</h2>
+    <h3>Talk just like a whale, coming soon to an Android phone near you!</h3>
   </div>
 </body>
 </html>
