--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <div class="container">
     <img src="img/whitewhale.svg" alt="WhaleSay logo">
     <h3>Talk just like a whale, coming soon to an Android phone near you!</h3>
+    Follow the development <a href="https://github.com/worldturtlemedia/whalesay">here</a>
   </div>
 </body>
 </html>
